# pluginexecutor

./: AGENTS.md  Dockerfile  Dockerfile.linuxfabrik  PLAN.md  README.md  SCALING.md  pluginexecutor.py  pyproject.toml
.github/workflows/: docker-publish.yml
pluginexecutor/: __init__.py  _alerting.py  _cli.py  _config.py  _constants.py  _executor.py  _logging.py  _loki.py  _metrics.py  _plugin.py  _templating.py  _types.py  _web.py
tests/: test_pluginexecutor.py
