[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pluginexecutor"
version = "0.1.0"
description = "Small Naemon-compatible plugin executor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pluginexecutor = "pluginexecutor:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
